--- a/src/components/cssfiles/mainpage/More.css
+++ b/src/components/cssfiles/mainpage/More.css
@@ -1,7 +1,6 @@
 .more-container {
     padding: 2rem 0;
     background-color: rgba(247, 243, 234, 0.85);
-    min-height: calc(100vh - 80px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,6 +21,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
+    padding: 0 3vw;
     flex-wrap: wrap;
 }
 
